# Tekaplay

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_identity_core.py  0002_game_runtime.py  0003_content_studio.py  0004_player_systems.py  0005_ai_service.py  0006_commerce.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: health.py  router.py
backend/app/core/: config.py  context.py  errors.py  logging.py  ratelimit.py  redis.py  security.py
backend/app/db/: base.py  session.py  types.py
backend/app/events/: bus.py
backend/app/modules/: README.md  bootstrap.py
backend/app/modules/achievements/: events.py  models.py  repository.py  router.py  service.py
backend/app/modules/ai/: cache.py  events.py  features.py  models.py  provider.py  repository.py  router.py  schemas.py  service.py  tasks.py
backend/app/modules/auth/: events.py  models.py  oauth.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/commerce/: events.py  gateway.py  models.py  repository.py  router.py  (+2 more)
backend/app/repositories/: base.py
backend/app/scripts/: create_admin.py  seed_demo.py
backend/app/services/: base.py
backend/app/workers/: celery_app.py
backend/examples/: aws_cp_mission_1.json
backend/tests/: conftest.py  test_ai.py  test_auth_flow.py  test_challenges.py  test_commerce.py  test_content.py  test_health.py  test_players.py  test_rbac.py  test_runtime_api.py  test_runtime_engine.py  test_security.py
(+76 files in other folders)
